# pyolice

./: Dockerfile  Makefile  README.md  README.rst  README.template.md  check_version_bump.sh  pyproject.toml  render_readme.py  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: main.yml
git-hooks/: pre-commit
pyolice/: command_line.py  command_parser.py
tests/: example.yml
